[package]
name = "outgauge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
bitflags = "2.3.3"
tokio = { version = "1.29.1", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }

[features]
default = ["std", "tokio"]
std = []
blocking = ["std"]

[[example]]
name = "async-print"

[[example]]
name = "blocking-print"
required-features = ["blocking"]
